Changed url routing so site root is at base url

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -10,6 +10,6 @@
     <input type="submit" value="Edit">
 </form>
 
-<form action="/app/">
+<form action="/">
     <input type="submit" value="Back to all">
 </form>
