--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -1,7 +1,9 @@
 {% load staticfiles %}
 <html>
   <head>
-    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}"
+    <link href="{% static 'css/bootstrap.min.css' %}"
+          rel="stylesheet" media="screen">
+      <link href="{% static 'css/styles.css' %}"
           rel="stylesheet" media="screen">
   </head>
 
@@ -9,6 +11,6 @@
     {% block content %}
     {% endblock %}
 
-    <script src="{% static 'bootstrap/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
