Implemented email/mark complete feature, improved visuals a bit with some basic bootstrap stuff

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -3,23 +3,31 @@
 {% block content %}
 
 {% if customers_list %}
-    <h3>Active</h3>
-    <ul>
-    {% for customer in customers_list %}
-        {% if customer.completed == False %}
-        <li><a href="{% url 'app:detail' customer.id %}">{{ customer.first_name }} {{ customer.last_name }}</a></li>
-        {% endif %}
-    {% endfor %}
-    </ul>
+    <h3>Active Customers</h3>
 
-    <h3>Inactive</h3>
-    <ul>
+    <table class="table">
+    <thead>
+        <td>ID</td>
+        <td>Name</td>
+        <td>Email</td>
+        <td>Service Description</td>
+    </thead>
+
     {% for customer in customers_list %}
-        {% if customer.completed == True %}
-        <li><a href="{% url 'app:detail' customer.id %}">{{ customer.first_name }} {{ customer.last_name }}</a></li>
+        <tr>
+        {% if customer.completed == False %}
+            <td>{{ customer.id }}</td>
+            <td><a href="{% url 'app:detail' customer.id %}">{{ customer.first_name }} {{ customer.last_name }}</a></td>
+            <td>{{ customer.email }}</td>
+            <td>
+                {{ customer.service_description|slice:":75" }}
+                {% if customer.service_description|length > 75  %}...{% endif %}
+            </td>
         {% endif %}
+        </tr>
     {% endfor %}
-    </ul>
+    </table>
+
 {% endif %}
 
 {% endblock %}
