--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -10,9 +10,12 @@
 <p>Completed: {{ customer.completed }}</p>
 <p>Date Submitted: {{ customer.date_submitted }}</p>
 
-<form action="{% url 'app:edit' customer.id %}">
-    <input class="btn btn-default" type="submit" value="Edit">
-    <a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>
-</form>
+{#<form action="{% url 'app:edit' customer.id %}">#}
+{#    <input class="btn btn-default" type="submit" value="Edit">#}
+{#    <a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>#}
+{#</form>#}
+<a class="btn btn-default" href="{% url 'app:mark_completed' customer.id %}" role="button">Mark as completed</a>
+<a class="btn btn-default" href="{% url 'app:edit' customer.id %}" role="button">Edit</a>
+<a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>
 
 {% endblock %}
