--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -1,7 +1,14 @@
+{% extends "app/base.html" %}
+
+{% block content %}
+
 {%  if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Save" /> {# TODO add cancel #}
+    <input type="submit" value="Save" />
+    <input type="submit" name="cancel" value="Cancel" />
 </form>
+
+{% endblock %}
