--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -19,6 +19,7 @@
     {% block content %}
     {% endblock %}
 
+    <script src="{% static 'js/jquery-2.1.3.min.js' %}"
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
