--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -7,6 +7,7 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form.as_p }}
+    {{ form.management_form }}
     <input type="submit" value="Save" />
     <input type="submit" name="cancel" value="Cancel" />
 </form>
