--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -3,12 +3,18 @@
   <head>
     <link href="{% static 'css/bootstrap.min.css' %}"
           rel="stylesheet" media="screen">
-      <link href="{% static 'css/styles.css' %}"
+    <link href="{% static 'css/styles.css' %}"
           rel="stylesheet" media="screen">
+    <script src="{% static 'js/jquery-2.1.4.min.js' %}" 
+            type="text/javascript" 
+            charset="utf-8" async defer></script>
+    <script src="{% static 'js/bootstrap.min.js' %}" 
+            type="text/javascript" 
+            charset="utf-8" async defer></script>
   </head>
 
   <body>
-    <div>
+    <div id="login-info">
         {{ user }}
         {% if user.is_anonymous %}
         <a href="{% url 'app:login' %}">login</a>
@@ -18,7 +24,5 @@
     </div>
     {% block content %}
     {% endblock %}
-
-    <script src="{% static 'js/bootstrap.min.js' %}"></script>
   </body>
 </html>
