--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -2,7 +2,9 @@
 
 {% block content %}
 
-{% if customers_list %}
+<a href="/new" class="btn btn-info" role="button" name='newCustomer'>Create new transaction</a>
+
+{% if transactions_list %}
     <h3>Active Customers</h3>
 
     <table class="table">
@@ -13,15 +15,15 @@
         <td>Service Description</td>
     </thead>
 
-    {% for customer in customers_list %}
+    {% for transaction in transactions_list %}
         <tr>
-        {% if customer.completed == False %}
-            <td>{{ customer.id }}</td>
-            <td><a href="{% url 'app:detail' customer.id %}">{{ customer.first_name }} {{ customer.last_name }}</a></td>
-            <td>{{ customer.email }}</td>
+        {% if transaction.completed == False %}
+            <td>{{ transaction.id }}</td>
+            <td><a href="{% url 'app:detail' transaction.id %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
+            <td>{{ transaction.email }}</td>
             <td>
-                {{ customer.service_description|slice:":75" }}
-                {% if customer.service_description|length > 75  %}...{% endif %}
+                {{ transaction.service_description|slice:":75" }}
+                {% if transaction.service_description|length > 75  %}...{% endif %}
             </td>
         {% endif %}
         </tr>
