--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -9,14 +9,15 @@
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <form action="" method="post">{% csrf_token %}
 <table>
+{% load bootstrap_tags %}
 {{ wizard.management_form }}
 {% if wizard.form.forms %}
     {{ wizard.form.management_form }}
     {% for form in wizard.form.forms %}
-        {{ form }}
+        {{ form | as_bootstrap}}
     {% endfor %}
 {% else %}
-    {{ wizard.form }}
+    {{ wizard.form | as_bootstrap}}
 {% endif %}
 </table>
 {% if wizard.steps.prev %}
