--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -4,20 +4,46 @@
 
 <h2>Customer name: {{ transaction.first_name }} {{ transaction.last_name }}</h2>
 
-<p><span class='labels'>Email:</span> {{ transaction.email }}</p>
-<p><span class='labels'>Service Description:</span> {{ transaction.service_description }}</p>
-<p><span class='labels'>Price:</span> {{ transaction.price }}</p>
-<p><span class='labels'>Completed:</span> {{ transaction.completed }}</p>
-<p><span class='labels'>Date Submitted:</span> {{ transaction.date_submitted }}</p>
-<p><span class='labels'>Order details:</span> {{transaction.service_description}}<br>
-                  {{transaction.handlebars}}<br>
-                  {{transaction.brakes}}<br>
-                  {{transaction.frame}}</p>
 
-{#<form action="{% url 'app:edit' transaction.id %}">#}
-{#    <input class="btn btn-default" type="submit" value="Edit">#}
-{#    <a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>#}
-{#</form>#}
+<table class="table table-striped">
+    <tr>
+        <td>Email</td>
+        <td>{{ transaction.email }}</td>
+    </tr>
+    <tr>
+        <td>Service Description</td>
+        <td>{{ transaction.service_description }} </td>
+    </tr>
+    <tr>
+        <td>Price</td>
+        <td>{{ transaction.price }} </td>
+    </tr>
+    <tr>
+        <td>Completed</td>
+        <td>{{ transaction.completed }}</td>
+    </tr>
+    <tr>
+        <td>Date Submitted</td>
+        <td>{{ transaction.date_submitted }}</td>
+    </tr>
+    <tr>
+        <td>Order Details</td>
+        <td>{{ transaction.service_description }} </td>
+    </tr>
+    <tr>
+        <td># Handlebars Needed</td>
+        <td>{{ transaction.handlebars }}</td>
+    </tr>
+    <tr>
+        <td># Brakes Needed</td>
+        <td>{{ transaction.brakes }}</td>
+    </tr>
+    <tr>
+        <td># Frames Needed</td>
+        <td>{{ transaction.frame }}</td>
+    </tr>
+</table>
+
 <a class="btn btn-default" href="{% url 'app:mark_completed' transaction.id %}" role="button">Mark as completed</a>
 <a class="btn btn-default" href="{% url 'app:edit' transaction.id %}" role="button">Edit</a>
 <a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>
