--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -4,9 +4,10 @@
 
 {%  if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
+{% load bootstrap_tags %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form.as_p }}
+    {{ form | as_bootstrap }}
     <input type="submit" value="Save" />
     <input type="submit" name="cancel" value="Cancel" />
 </form>
