Made Transaction Checkbox forms Optional
Summary

forms.py:
set required=False for each checkbox form widget

view.py:
-Cleaned up the process() method for transactions

models.py:
-set blank=True for the transaction checkboxes

--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -8,8 +8,8 @@
 <form action="" method="post">
     {% csrf_token %}
     {{ form | as_bootstrap }}
-    <input type="submit" value="Save" />
-    <input type="submit" name="cancel" value="Cancel" />
+    <button type="submit" class="btn btn-default">Save</button>
+    <button type="submit" name="cancel" class="btn btn-default">Cancel</button>
 </form>
 
 {% endblock %}
