--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -15,11 +15,13 @@
 
   <body>
     <div id="login-info">
-        {{ user }}
+
         {% if user.is_anonymous %}
-        <a href="{% url 'app:login' %}">login</a>
+        You are logged out.
+        <a href="{% url 'app:login' %}">Log In</a>
         {% else %}
-        <a href="{% url 'app:logout' %}">logout</a>
+        {{ user }} |
+        <a href="{% url 'app:logout' %}">Log Out</a>
         {% endif %}
     </div>
     {% block content %}
