Created /history page to display past transactions
Summary:

urls.py: Added /history

views.py:
Added history(), modified index()
Both render the index.html template, passing in a "complete" boolean

index.html:
Display button to move between index and history depending on the
"complete" boolean

detail.html:
Only display the mark_completed and edit buttons if the transaction is
not complete.

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -44,8 +44,10 @@
     </tr>
 </table>
 
+{% if not transaction.completed %}
 <a class="btn btn-default" href="{% url 'app:mark_completed' transaction.id %}" role="button">Mark as completed</a>
 <a class="btn btn-default" href="{% url 'app:edit' transaction.id %}" role="button">Edit</a>
+{% endif %}
 <a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to All</a>
 
 {% endblock %}
