Implemented Hack to Show Checked Off Services
Summary:

Currently editing the initial set for TransactionUpdate,
which renders RepairsForm to app/edit.html.

The problem is that by default, TransactionUpdate renders
the checkboxes in edit.html by setting their values, but
leaving their "checked" attribute to the default (default=checked)

Solving this issue by editing the initial set is debatedly okay,
if it can be done by iterating over the desired fields in RepairsForm.
This could potentially be all fields besides price and service
description.

However, the desired behavior is actually to DISPLAY exactly the checkboxes
that were originally checked when creating the transaction. So we should
only display a checkbox for frame if e.g. need_handlebars is true in the
model (this was set when creating transaction). We should then check it
off or not based on done_handlebars (this can be set and reset when
editing a transaction).

--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -7,7 +7,12 @@
 {% load bootstrap_tags %}
 <form action="" method="post">
     {% csrf_token %}
-    {{ form | as_bootstrap }}
+    {% for field in form %}
+        <div class="fieldWrapper">
+            {{ field.errors }}
+            {{ field.label_tag }} {{ field }}
+        </div>
+    {% endfor %}
     <button type="submit" class="btn btn-default">Save</button>
     <button type="submit" name="cancel" class="btn btn-default">Cancel</button>
 </form>
