Restructured Transaction to work as desired.
Will write up summary after minor fix ups on next commit.

TODO: Make /edit checkbox display according to whether the task
has been completed

--- a/app/templates/app/myEdit.html
+++ b/app/templates/app/myEdit.html
@@ -10,8 +10,9 @@
     {% for field in form %}
         <div class="fieldWrapper">
             {{ field.errors }}
+
             {% if field.name != 'price' and field.name != 'service_description' %}
-                {% if field.value == '1' %}
+                {% if field.value != 'NOT_ASSIGNED' %}
                     {{ field.label_tag }} {{ field }}
                 {% endif %}
             {% endif %}
