Core Transaction Functionality works, with one bug
Bug: All Transaction checkbox fields are displayed,
even though we only want to display those fields
that were checked when the Transaction was originally
created.

Reason: Unchecked checkboxes are not posted, which is the
same as checkboxes which are hidden in the template and
therefore not posted. Both are getting handled the same way-
by setting the field to "IN_PROGRESS", which is only correct
in the former case.

Possible Fixes:
-Figure out how to not update ModelForm fields that are None
in the database.
-Figure out how to get the primary key in the form, so that
we can query the database for each unchecked field and update
its value to its current value (set it to itself).

--- a/app/templates/app/myEdit.html
+++ b/app/templates/app/myEdit.html
@@ -1,3 +1,5 @@
+
+
 {% extends "app/base.html" %}
 
 {% block content %}
@@ -5,15 +7,17 @@
 {%  if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
 {% load bootstrap_tags %}
-<form action="" method="post">
+<form action="." method="post">
     {% csrf_token %}
     {% for field in form %}
         <div class="fieldWrapper">
             {{ field.errors }}
 
             {% if field.name != 'price' and field.name != 'service_description' %}
-                {% if field.value != 'NOT_ASSIGNED' %}
-                    {{ field.label_tag }} {{ field }}
+                {% if field.value == 'IN_PROGRESS' %}
+                    {{ field.label_tag}} <input id="id_{{field.name}}" name={{field.name}} type="checkbox" value="IN_PROGRESS" />
+                {% elif  field.value == 'COMPLETE' %}
+                    {{ field.label_tag}} <input id="id_{{field.name}}" name={{field.name}} type="checkbox" checked="checked" value="COMPLETE" />
                 {% endif %}
             {% endif %}
         </div>
@@ -23,6 +27,7 @@
             {{ field.label_tag }} {{ field }}
         {% endif %}
     {% endfor %}
+
 
     <button type="submit" class="btn btn-default">Save</button>
     <button type="submit" name="cancel" class="btn btn-default">Cancel</button>
