Transaction Functionality is GO!
Summary:
Made changes so that only the fields specified upon creating
the transaction show up, and only these fields are edited in
the UpdateTransaction view.

Implementation:

myEdit.html: Added hidden inputs with name mangling so that all
assigned inputs (all those displayed in the form) are submitted
to the RepairsForm.

forms.py: Used entry.save(update_fields=[my_field]) to update only
the assigned fields, so that NOT_ASSIGNED fields remain unchanged.

--- a/app/templates/app/myEdit.html
+++ b/app/templates/app/myEdit.html
@@ -16,9 +16,12 @@
             {% if field.name != 'price' and field.name != 'service_description' %}
                 {% if field.value == 'IN_PROGRESS' %}
                     {{ field.label_tag}} <input id="id_{{field.name}}" name={{field.name}} type="checkbox" value="IN_PROGRESS" />
+                    <input type="hidden" name="{{field.name}}_ALL" value="0">
                 {% elif  field.value == 'COMPLETE' %}
                     {{ field.label_tag}} <input id="id_{{field.name}}" name={{field.name}} type="checkbox" checked="checked" value="COMPLETE" />
+                    <input type="hidden" name="{{field.name}}_ALL" value="0">
                 {% endif %}
+
             {% endif %}
         </div>
     {% endfor %}
