--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,10 +4,11 @@
 
 
 {% if complete %}
-<a href="/" class="btn btn-info" role="button" name='newCustomer'>View current transactions</a>
+<a href="/" class="btn btn-info" role="button" name='back_to_list'>View current transactions</a>
 {% else %}
-<a href="/new" class="btn btn-info" role="button" name='newCustomer'>Create new transaction</a>
-<a href="/history" class="btn btn-info" role="button" name='newCustomer'>View past transactions</a>
+<a href="/new" class="btn btn-info" role="button" name='new_transaction'>Create new transaction</a>
+<br><br>
+<a href="/history" class="btn btn-info" role="button" name='past_transactions'>View past transactions</a>
 {% endif %}
 
 {% if transactions_list %}
