Refactored Transactions to have Task querysets
Summary:
Same functionality as before, but now it is much easier
to append tasks to transactions, and append fields to
tasks, because Task has its own model which maps ManyToOne
to Transaction. Before, Transactions had a character field
for every single possible task (would end up being ~100 fields).

Implementation:

models.py:
	Added Task model, with foreign key to Transaction.

	Added AllTasks custom class. This is where we can put all
	the possible tasks. This can end up being a list of tuples or
	other objects which contain additional fields besides the task
	name. E.g. we should at least add the price of each task.

views.py:
	Changed TransactionUpdate(UpdateView) to a method update(request).
	This made it easier to make custom updates to the relevant tasks.
	The method renders edit.html with the assigned tasks.
	DRAWBACK- there is no form validation. But it's just checkboxes.
	So where could the clients go wrong?

	Modified TransactionDetail to render the assigned tasks
	to detail.html.

edit.html: Render a checkbox for each assigned task. No longer need
	hidden fields because the view knows all the tasks which are in
	the transaction's queryset.

detail.html: Render the name and completion status of each assigned task.

--- a/app/templates/app/detail.html
+++ b/app/templates/app/detail.html
@@ -30,19 +30,14 @@
         <td>Order Details</td>
         <td>{{ transaction.service_description }} </td>
     </tr>
-    <tr>
-        <td># Handlebars Needed</td>
-        <td>{{ transaction.handlebars }}</td>
-    </tr>
-    <tr>
-        <td># Brakes Needed</td>
-        <td>{{ transaction.brakes }}</td>
-    </tr>
-    <tr>
-        <td># Frames Needed</td>
-        <td>{{ transaction.frame }}</td>
-    </tr>
+    {% for task in tasks %}
+        <tr>
+            <td>{{ task.name }} </td>
+            <td>{{ task.completed }}</td>
+        </tr>
+    {% endfor %}
 </table>
+
 
 {% if not transaction.completed %}
 <a class="btn btn-default" href="{% url 'app:mark_completed' transaction.id %}" role="button">Mark as completed</a>
