--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -24,6 +24,6 @@
 <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
 <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
 {% endif %}
-<input type="submit" value="{% trans "submit" %}"/>
+<input type="submit" value='{% trans "submit" %}'/>
 </form>
 {% endblock %}
