Added attributes to Tasks in Form
Summary:
Added TasksForm for all the tasks, and RepairsForm which inherits from
TasksForm and adds the remaining non-task fields.
The attributes (price, category) defined in TasksForm are saved when
processing the form when the user submits the TransactionWizard.

forms.py: Added TasksForm and RepairsForm

views.py: Changed process(form_data)

urls.py: Changed /new url to use RepairsForm

admin.py: Added Task to admin page

--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -14,7 +14,10 @@
 {% if wizard.form.forms %}
     {{ wizard.form.management_form }}
     {% for form in wizard.form.forms %}
-        {{ form | as_bootstrap}}
+        {% for key, value in form %}
+            {{ value }}
+            {{ field }} {% if 'price' in value %} Woo {% endif %}
+        {% endfor %}
     {% endfor %}
 {% else %}
     {{ wizard.form | as_bootstrap}}
