--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -10,18 +10,18 @@
 <form action="" method="post">{% csrf_token %}
 <table>
 {% load bootstrap_tags %}
+
+{% load repairs_form %}
 {{ wizard.management_form }}
-{% if wizard.form.forms %}
-    {{ wizard.form.management_form }}
-    {% for form in wizard.form.forms %}
-        {% for key, value in form %}
-            {{ value }}
-            {{ field }} {% if 'price' in value %} Woo {% endif %}
-        {% endfor %}
+
+    {% for field in wizard.form %}
+    <div class="fieldWrapper ">
+        {{ field.label }}
+        {% if wizard.steps.step0 == 1 %} {% if info_dict|is_member:field.label %}  (${{ info_dict|get_price:field.label }}) {% endif %} {% endif %}
+        {{field}}
+    </div>
     {% endfor %}
-{% else %}
-    {{ wizard.form | as_bootstrap}}
-{% endif %}
+
 </table>
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
