--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -9,24 +9,23 @@
 <p>Step {{ wizard.steps.step1 }} of {{ wizard.steps.count }}</p>
 <form action="" method="post">{% csrf_token %}
 <table>
-{% load bootstrap_tags %}
+{% load bootstrap %}
 
 {% load repairs_form %}
 {{ wizard.management_form }}
 
     {% for field in wizard.form %}
-    <div class="fieldWrapper ">
-        {{ field.label }}
+    <div class="fieldWrapper">
         {% if wizard.steps.step0 == 1 %} {% if info_dict|is_member:field.label %}  (${{ info_dict|get_price:field.label }}) {% endif %} {% endif %}
-        {{field}}
+        {{field | bootstrap}}
     </div>
     {% endfor %}
 
 </table>
 {% if wizard.steps.prev %}
-<button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}">{% trans "first step" %}</button>
-<button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}">{% trans "prev step" %}</button>
+<button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}" class="btn btn-default btn-lg">{% trans "first step" %}</button>
+<button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="btn btn-default btn-lg">{% trans "prev step" %}</button>
 {% endif %}
-<input type="submit" value='{% trans "submit" %}'/>
+<input type="submit" value='{% trans "submit" %}' class="btn btn-default btn-lg"/>
 </form>
 {% endblock %}
