Added auto-updating of Transaction Price when creating transaction
Summary:
Transaction price starts at 0.
Selecting a checkbox increments the transaction price by the task price.
De-selecting decrements the transaction price by the task price.

Implementation:

create_transaction.js:
Implemented the logic for updating the price upon selecting/deselecting
checkboxes.

create_transaction.html:
Included the create_transaction.js script

base.html:
Added template block for head that create_transaction.html and other
child templates can extend.

--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -12,7 +12,8 @@
             type="text/javascript" 
             charset="utf-8" async defer></script>
   </head>
-
+    {% block head %}
+    {% endblock %}
   <body>
     <div id="login-info">
 
