Changed CreateTransaction to group tasks by category
Implementation:

forms.py:
	TaskForm.get_category_dict() returns dict mapping categories to
	task info_dicts.
	TaskForm.get_non_task_fields() returns a tuple of non-task-field
	labels. These labels must exactly match the actual labels rendered
	from RepairsForm.

views.py:
	Pass in category_dict and non_task_fields to create_transaction.html

create_transaction.html:
	First, displays task fields, grouped by outer loop over category.
	Second, displays non task fields.
	There is logic for checking which step of the wizard form we are on.
	We could end up separating this .html file into one for the customer
	form and one for the repairs form.

--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -16,12 +16,33 @@
 
 {% load repairs_form %}
 {{ wizard.management_form }}
-    {% for field in wizard.form %}
-    <div class="fieldWrapper">
-        {% if wizard.steps.step0 == 1 %} {% if info_dict|is_member:field.label %}  (${{ info_dict|get_price:field.label }}) {% endif %}
-        {% endif %} {{field | bootstrap}}
-    </div>
-    {% endfor %}
+    {% if wizard.steps.step0 == 1 %}
+        {% for category_pair in category_dict.iteritems %}
+            <h3> {{ category_pair.0 }} </h3>
+            {% for field in wizard.form %}
+            <div class="fieldWrapper">
+                {% if category_pair.1|is_member:field.label %}
+                (${{ category_pair.1|get_price:field.label }})
+                {{field | bootstrap}}
+                {% endif %}
+            </div>
+            {% endfor %}
+        {% endfor %}
+
+        {% for field in wizard.form %}
+            {% if non_task_fields|is_member:field.label %}
+                <div class="fieldWrapper">
+                    {{field | bootstrap}}
+                </div>
+            {% endif %}
+        {% endfor %}
+    {% else %}
+        {% for field in wizard.form %}
+            <div class="fieldWrapper">
+                {{field | bootstrap}}
+            </div>
+        {% endfor %}
+    {% endif %}
 
 </table>
 {% if wizard.steps.prev %}
