--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -14,17 +14,21 @@
 <table>
 {% load bootstrap %}
 
+<input type="hidden" value="boo">
+
 {% load repairs_form %}
 {{ wizard.management_form }}
     {% if wizard.steps.step0 == 1 %}
         {% for category_pair in category_dict.iteritems %}
             <h3> {{ category_pair.0 }} </h3>
-            {% for field in wizard.form %}
+            {% for field_info_pair in category_pair.1.iteritems %}
             <div class="fieldWrapper">
-                {% if category_pair.1|is_member:field.label %}
-                (${{ category_pair.1|get_price:field.label }})
-                {{field | bootstrap}}
-                {% endif %}
+                <div class="form-group">
+                    <label class="control-label  " for="id_1-{{ field_info_pair.0 }}">(${{ field_info_pair.1|get_member:'price'}})  {{ field_info_pair.0 }}</label>
+                    <div class=" ">
+                        <input class=" form-control" id="id_1-{{ field_info_pair.0 }}" name="1-{{field_info_pair.0}}" type="checkbox" />
+                    </div>
+                </div>
             </div>
             {% endfor %}
         {% endfor %}
