--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -29,9 +29,9 @@
                     <div id="{{task.name}}" category="{{ info_dict|get_member:task.name|get_member:'category' }}">
                         <div class="fieldWrapper">
                             {% if not task.completed %}
-                            <em><strong>{{ task.name }}</strong></em> <input id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
+                            <em><strong>{{ task.name }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
                             {% else %}
-                            <em><strong>{{ task.name }}</strong></em> <input id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
+                            <em><strong>{{ task.name }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
                             {% endif %}
                         </div>
                     </div>
