--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -2,12 +2,11 @@
 
 {% block content %}
 
-<a href="/new" class="btn btn-info" role="button" name='new_transaction'>Create new transaction</a>
-<br><br>
-<a href="/history" class="btn btn-info" role="button" name='past_transactions'>View past transactions</a>
+<a href="/" class="btn btn-info" role="button" name='back_to_list'>View current transactions</a>
 
 {% if transactions_list %}
-    <h3>Active Customers</h3>
+
+    <h3>Past Customers</h3>
 
     <table class="table">
     <thead>
@@ -20,7 +19,7 @@
     {% for transaction in transactions_list %}
         <tr>
             <td>{{ transaction.id }}</td>
-            <td><a href="{% url 'app:detail' transaction.id %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
+            <td><a href="{% url 'app:detail_complete' transaction.id %}">{{ transaction.first_name }} {{ transaction.last_name }}</a></td>
             <td>{{ transaction.email }}</td>
             <td>
                 {{ transaction.service_description|slice:":75" }}
