Added Rental/Refurbished Bike Input to create_transaction
Implementation:

Models.py:
Added rental and refurbished models, and corresponding nullable foreign keys in the Transaction model.

create_transaction.html:
Added selector for type of transaction (customer, rental, refurbished)

create_transaction.js:
Show/hide the rental/refurbished vin number text fields upon selector events

detail_base.html:
Base detail table. Extends base.html, is extended by both detail.html and detail_complete.html.

views.py:
Fixed done() logic to avoid mistaking a price of 0 for a task with value=False. Tasks with value=False are not put into the form_data, and omitting the price field was causing a missing key error in process().

--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -33,6 +33,16 @@
             {% endfor %}
         {% endfor %}
 
+        <br>
+        <div class="fieldWrapper">
+            <select class="form-control">
+                <option value="customer_bike">Customer Bike</option>
+                <option value="rental_bike">Rental Bike</option>
+                <option value="refurbished_bike">Refurbished Bike</option>
+            </select>
+            <br>
+        </div>
+
         {% for field in wizard.form %}
             {% if non_task_fields|is_member:field.label %}
                 <div class="fieldWrapper">
@@ -48,7 +58,10 @@
         {% endfor %}
     {% endif %}
 
+
 </table>
+
+
 {% if wizard.steps.prev %}
 <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.first }}" class="btn btn-default btn-lg">{% trans "first step" %}</button>
 <button name="wizard_goto_step" type="submit" value="{{ wizard.steps.prev }}" class="btn btn-default btn-lg">{% trans "prev step" %}</button>
