Save rental/refurbished vin number upon create.
Implementation:

views.py: Updated process() to create rental/refurbished bike object
and add a foreign key to it in the Transaction object

detail_base.html: Include vin number if foreign key is non-null

--- a/app/templates/app/detail_base.html
+++ b/app/templates/app/detail_base.html
@@ -30,6 +30,18 @@
         <td>Order Details</td>
         <td>{{ transaction.service_description }} </td>
     </tr>
+
+    {% if transaction.rental_bike %}
+    <tr>
+        <td>Rental VIN</td>
+        <td>{{ transaction.rental_bike.vin }} </td>
+    </tr>
+    {% elif transaction.refurbished_bike %}
+    <tr>
+        <td>Refurbished VIN</td>
+        <td>{{ transaction.refurbished_bike.vin }} </td>
+    </tr>
+    {% endif %}
     {% for task in tasks %}
         <tr>
             <td>{{ task.name }} </td>
