Fixed task creation/display for the Complete Task List
There were two problems:

(1) rendering task names containing white spaces as id's in the templates was causing those div's to throw errors and not display at all. Solution was to apply a filter to replace " " with "_". When displaying task fields, the reverse filter was used to replace "_" with " ".

(2) In info_dict, the category keys mapped to the field name values. These values instead needed to match the category keys from category_dict. In edit.html, the info_dict category values are checked against the category_dict keys.

--- a/app/templates/app/create_transaction.html
+++ b/app/templates/app/create_transaction.html
@@ -24,9 +24,9 @@
             {% for field_info_pair in category_pair.1.iteritems %}
             <div class="fieldWrapper">
                 <div class="form-group">
-                    <label class="control-label  " for="id_1-{{ field_info_pair.0 }}">(${{ field_info_pair.1|get_member:'price'}})  {{ field_info_pair.0 }}</label>
+                    <label class="control-label  " for="id_1-{{ field_info_pair.0|join_whitespace }}">(${{ field_info_pair.1|get_member:'price'}})  {{ field_info_pair.0 }}</label>
                     <div class=" ">
-                        <input class="form-control" id="id_1-{{ field_info_pair.0 }}" name="1-{{field_info_pair.0}}" type="checkbox" />
+                        <input class="form-control" id="id_1-{{ field_info_pair.0|join_whitespace }}" name="1-{{field_info_pair.0|join_whitespace}}" type="checkbox" />
                     </div>
                 </div>
             </div>
