--- a/app/templates/app/edit.html
+++ b/app/templates/app/edit.html
@@ -18,7 +18,7 @@
     {% csrf_token %}
 
     {% for category_pair in category_dict.iteritems %}
-        <div id = {{category_pair.0}} style="display:none">
+        <div id = {{category_pair.0|join_whitespace}} style="display:none">
             <h3>{{ category_pair.0 }}</h3>
         </div>
     {% endfor %}
@@ -26,12 +26,12 @@
 
     <div id="task-container" style="display:none">
     {% for task in tasks %}
-                    <div id="{{task.name}}" category="{{ info_dict|get_member:task.name|get_member:'category' }}">
+                    <div id="{{task.name|join_whitespace}}" category="{{ info_dict|get_member:task.name|get_member:'category'|join_whitespace }}">
                         <div class="fieldWrapper">
                             {% if not task.completed %}
-                            <em><strong>{{ task.name }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
+                            <em><strong>{{ task.name|place_whitespace }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} type="checkbox"/>
                             {% else %}
-                            <em><strong>{{ task.name }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
+                            <em><strong>{{ task.name|place_whitespace }}</strong></em> <input class="form-control" id="id_{{task.name}}" name={{task.name}} checked="checked" type="checkbox"/>
                             {% endif %}
                         </div>
                     </div>
