--- a/app/templates/app/base.html
+++ b/app/templates/app/base.html
@@ -5,24 +5,26 @@
           rel="stylesheet" media="screen">
     <link href="{% static 'css/styles.css' %}"
           rel="stylesheet" media="screen">
-    <script src="{% static 'js/jquery-2.1.4.min.js' %}" 
-            type="text/javascript" 
+    <link href="{% static 'css/bootstrap_extensions.css' %}"
+          rel="stylesheet" media="screen">
+    <script src="{% static 'js/jquery-2.1.4.min.js' %}"
+            type="text/javascript"
             charset="utf-8" async defer></script>
-    <script src="{% static 'js/bootstrap.min.js' %}" 
-            type="text/javascript" 
+    <script src="{% static 'js/bootstrap.min.js' %}"
+            type="text/javascript"
             charset="utf-8" async defer></script>
   </head>
     {% block head %}
     {% endblock %}
   <body>
-    <div id="login-info">
+    <div id="login-info" class="bold">
 
         {% if user.is_anonymous %}
         You are logged out.
         <a href="{% url 'app:login' %}">Log In</a>
         {% else %}
         {{ user }} |
-        <a href="{% url 'app:logout' %}">Log Out</a>
+        <a href="{% url 'app:logout' %}" class="btn">Log Out</a><br><br>
         {% endif %}
     </div>
     {% block content %}
