made the buttons bigger. todo: subclass the form elements for mobile friendliness

--- a/app/templates/app/history.html
+++ b/app/templates/app/history.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-<a href="/" class="btn btn-info" role="button" name='back_to_list'>View current transactions</a>
+<a href="/" class="btn btn-default btn-xlarge" role="button" name='back_to_list'>Index</a>
 
 {% if transactions_list %}
 
