--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -4,7 +4,7 @@
 
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="/new" class="btn btn-default btn-xlarge" role="button" name='new_transaction'>New</a>
-    <a href="/history" class="btn btn-default btn-xlarge" role="button" name='past_transactions'>Complete</a>
+    <a href="/history" class="btn btn-default btn-xlarge" role="button" name='past_transactions'>History</a>
 </div>
 <br>
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
