--- a/app/templates/app/refurbished.html
+++ b/app/templates/app/refurbished.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
-<a href="{% url 'app:new_refurbished' %}" class="btn btn-default" role="button" name='new_refurbished'>Add Refurbished Bike</a>
-<a class="btn btn-default" href="{% url 'app:index' %}" role="button">Back to Transactions</a>
+<a href="{% url 'app:new_refurbished' %}" class="btn btn-default btn-xlarge" role="button" name='new_refurbished'>Add Refurbished Bike</a>
+<a class="btn btn-default btn-xlarge" href="{% url 'app:index' %}" role="button">Back to Transactions</a>
 
 {% if refurbished_list %}
     <h3>Rental Bikes</h3>
