Create RevenueUpdate when mark_as_complete
views.py: Create RevenueUpdate when mark a transaction as complete
balance.html: Display all RevenueUpdates
revenue_update.html: Make revenue update. Right now this just submits a form which is not process.

Added the corresponding urls and forms.

--- a/app/templates/app/index.html
+++ b/app/templates/app/index.html
@@ -5,11 +5,9 @@
 <div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="/new" class="btn btn-default btn-xlarge" role="button" name='new_transaction'>New</a>
     <a href="/history" class="btn btn-default btn-xlarge" role="button" name='past_transactions'>History</a>
-</div>
-<br>
-<div class="btn-group btn-group-justified" role="group" aria-label="...">
     <a href="/rental" class="btn btn-default btn-xlarge" role="button" name='rental'>Rental</a>
     <a href="/refurbished" class="btn btn-default btn-xlarge" role="button" name='refurbished'>Refurbished</a>
+    <a href="/balance" class="btn btn-default btn-xlarge" role="button" name='balance'>Balance</a>
 </div>
 {% if transactions_list %}
     <h3>Active Customers</h3>
