Save manual RevenueUpdates, Display Running Balance
views.py: Save manual RevenueUpdate's by posting from /balance

models.py: Added new_total_revenue column to RevenueUpdate, to track running total.

balance.html: display new_total_revenue column. Negative payments (charges) are in red.

--- a/app/templates/app/balance.html
+++ b/app/templates/app/balance.html
@@ -14,6 +14,7 @@
         <td>Amount</td>
         <td>Employee</td>
         <td>Description</td>
+        <td>Total Revenue</td>
     </thead>
 
     {% for update in revenue_updates %}
@@ -23,9 +24,17 @@
             {% else %}
                 <td><a href="#">-</a></td>
             {% endif %}
-            <td>${{ update.amount }}</td>
+
+            <td> {% if update.amount < 0 %}
+                    <font color='cranberry'>${{ update.amount }}</font>
+                {% else %}
+                    {{ update.amount }}
+                {% endif %}
+            </td>
             <td>{{ update.employee }}</td>
             <td>{{ update.description }} </td>
+
+            <td>${{ update.new_total_revenue }}</td>
         </tr>
     {% endfor %}
     </table>
