--- a/app/templates/app/revenue_update.html
+++ b/app/templates/app/revenue_update.html
@@ -6,20 +6,13 @@
     <form actions="." method="post">
         {% csrf_token %}
         {% for field in form %}
-            {% if field.name != "employee" and field.name != "completed_transaction" %}
-                {{ field|bootstrap }}
-            {% endif %}
+            {% with name=field.name %}
+                {% if name == "amount" or name == "description" %}
+                    {{ field|bootstrap }}
+                {% endif %}
+            {% endwith %}
         {% endfor %}
-        <div class="form-group">
-            <div class=" ">
-                <input class=" form-control" type="hidden" name="employee" id="id_employee">
-            </div>
-        </div>
-        <div class="form-group">
-            <div class=" ">
-                <input class=" form-control" type="hidden" name="completed_transaction" id="id_completed_transaction">
-            </div>
-        </div>
+
 
 
         <input type="submit" value="Submit">
