Added $ in /balance page

--- a/app/templates/app/balance.html
+++ b/app/templates/app/balance.html
@@ -28,7 +28,7 @@
             <td> {% if update.amount < 0 %}
                     <font color='cranberry'>${{ update.amount }}</font>
                 {% else %}
-                    {{ update.amount }}
+                    ${{ update.amount }}
                 {% endif %}
             </td>
             <td>{{ update.employee }}</td>
